[3/7] fuse: exFAT Support
FUSE based exFAT Implementation

android: https://gerrit.omnirom.org/#/c/4448/
e2fsprogs: https://gerrit.omnirom.org/#/c/3191/
sepolicy: https://gerrit.omnirom.org/#/c/4444/
vold: https://gerrit.omnirom.org/#/c/4441/
vold: https://gerrit.omnirom.org/#/c/4442/
omni: https://gerrit.omnirom.org/#/c/4449/

Change-Id: If75cd36828afe0e56cd8c8dfc41bdbf77f12e206

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,11 @@
 	cancelling that same worker.  This caused a segmenation
 	fault. Reported and tested by Anatol Pomozov
 
+2013-02-07 Miklos Szeredi <miklos@szeredi.hu>
+
+        * libfuse: pass security context options to kernel. Patch by
+        Dalvik Khertel
+    
 2013-02-04  Miklos Szeredi <miklos@szeredi.hu>
 
 	* libfuse: fix crash in unlock_path().  Patch by Ratna Manoj
